--- a/app/src/main/res/layout/activity_fake_cat.xml
+++ b/app/src/main/res/layout/activity_fake_cat.xml
@@ -3,11 +3,30 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/image_rotate_recycler_view"
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:id="@+id/image_rotate_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <Button
+            android:background="@drawable/background_default_blue"
+            android:id="@+id/image_refresh_btn"
+            android:layout_below="@id/image_rotate_recycler_view"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/refresh_btn"
+            android:layout_margin="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
