--- a/app/src/main/res/layout/item_rotate_image.xml
+++ b/app/src/main/res/layout/item_rotate_image.xml
@@ -5,6 +5,7 @@
 
     <webbin.example.com.fakecat.RotateImageView
         android:id="@+id/item_rotate_image"
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
